--- a/dharmamind_vision/requirements.txt
+++ b/dharmamind_vision/requirements.txt
@@ -1,33 +1,70 @@
-# DharmaMind Vision Requirements
+# 🌟 DharmaMind Vision - Revolutionary AI Yoga & Meditation System Requirements
 
-# Core Computer Vision Dependencies
+# Core Computer Vision and AI
 opencv-python>=4.8.0
 mediapipe>=0.10.0
 numpy>=1.24.0
-
-# Machine Learning
+scipy>=1.10.0
 scikit-learn>=1.3.0
-joblib>=1.3.0
 
-# FastAPI and Web Framework
+# Deep Learning and AI
+torch>=2.0.0
+torchvision>=0.15.0
+transformers>=4.30.0
+sentence-transformers>=2.2.0
+
+# Natural Language Processing
+spacy>=3.6.0
+nltk>=3.8.0
+textblob>=0.17.0
+
+# Data Processing and Analysis
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+pillow>=10.0.0
+
+# Database and Storage
+sqlalchemy>=2.0.0
+
+# API and Web Framework
 fastapi>=0.100.0
 uvicorn[standard]>=0.23.0
 python-multipart>=0.0.6
 websockets>=11.0
-
-# Image Processing
-pillow>=10.0.0
-
-# Data Validation
 pydantic>=2.0.0
 
-# Async Support
+# Real-time Processing
 asyncio-mqtt>=0.13.0
 
-# Optional: Enhanced Performance
-# tensorflow>=2.13.0  # For advanced ML features
-# torch>=2.0.0        # Alternative ML backend
-# onnxruntime>=1.15.0 # Optimized inference
+# Traditional Yoga and Cultural Integration
+# (Custom modules for Sanskrit, traditional wisdom)
+
+# Performance and Optimization
+numba>=0.57.0
+joblib>=1.3.0
+
+# Testing and Development
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+black>=23.0.0
+flake8>=6.0.0
+
+# Documentation
+sphinx>=7.0.0
+sphinx-rtd-theme>=1.3.0
+
+# Optional GPU Acceleration
+# tensorflow>=2.13.0  # Uncomment for TensorFlow support
+# onnxruntime-gpu>=1.15.0  # Uncomment for ONNX GPU support
+
+# System Monitoring
+psutil>=5.9.0
+memory-profiler>=0.61.0
+
+# Cultural and Language Support
+# indic-transliteration>=2.3.0  # For Sanskrit transliteration
+# polyglot>=16.7.4  # For multilingual support
 
 # Development Dependencies (optional)
 # pytest>=7.4.0
