Complete Community app with unified design system
- Created shared Layout component (Header, Footer, Layout wrapper)
- Added discussion pages (list, detail, new)
- Added member pages (list, profile)
- Added event pages (list, detail with RSVP)
- Updated login/signup to redirect to dharmamind.com
- Created unified payment system through Brand Webpage
- Added checkout and billing pages to Brand Webpage
- Fixed domain structure: .com (Brand), .ai (Chat), .org (Community)
- All payments now handled centrally by dharmamind.com

--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -176,7 +176,7 @@ http {
     # Community platform
     server {
         listen 80;
-        server_name community.dharmamind.ai;
+        server_name dharmamind.org;
         
         location / {
             proxy_pass http://community;
