--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # 🐳 DharmaMind Complete Docker Compose Stack
 # Production-ready deployment with all services
 
@@ -77,8 +76,6 @@ services:
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
       GOOGLE_API_KEY: ${GOOGLE_API_KEY}
 
-      # Note: DharmaLLM integration removed - chat handled by frontend
-
       # Security
       CORS_ORIGINS: ${CORS_ORIGINS:-http://localhost:3000,https://dharmamind.ai}
       ALLOWED_HOSTS: ${ALLOWED_HOSTS:-localhost,dharmamind.ai,api.dharmamind.ai}
@@ -93,7 +90,6 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-      # Note: dharmallm dependency removed - chat is frontend-only
     networks:
       - dharmamind_network
     volumes:
@@ -113,6 +109,28 @@ services:
       context: ./Brand_Webpage
       dockerfile: Dockerfile
     container_name: dharmamind_brand_website
+    restart: unless-stopped
+    environment:
+      NEXT_PUBLIC_API_URL: http://localhost:8000/api
+      NEXT_PUBLIC_ENVIRONMENT: ${ENVIRONMENT:-production}
+      NODE_ENV: production
+    ports:
+      - "3001:3000"
+    depends_on:
+      - backend
+    networks:
+      - dharmamind_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  chat_app:
+    build:
+      context: ./dharmamind-chat
+      dockerfile: Dockerfile
+    container_name: dharmamind_chat
     restart: unless-stopped
     environment:
       NEXT_PUBLIC_API_URL: http://localhost:8000/api
@@ -141,7 +159,7 @@ services:
       NEXT_PUBLIC_ENVIRONMENT: ${ENVIRONMENT:-production}
       NODE_ENV: production
     ports:
-      - "3001:3000"
+      - "3002:3000"
     depends_on:
       - backend
     networks:
@@ -162,17 +180,12 @@ services:
     container_name: dharmamind_dharmallm
     restart: unless-stopped
     environment:
-      # Application environment
       ENVIRONMENT: ${ENVIRONMENT:-production}
       HOST: "0.0.0.0"
       PORT: "8001"
-
-      # Model configuration
       MODEL_PATH: /app/models
       DEVICE: ${LLM_DEVICE:-cpu}
       MAX_TOKENS: ${LLM_MAX_TOKENS:-2048}
-
-      # Logging
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
     volumes:
       - ./dharmallm/models:/app/models
@@ -263,9 +276,9 @@ services:
     environment:
       COLLECTOR_OTLP_ENABLED: "true"
     ports:
-      - "16686:16686" # Jaeger UI
-      - "14268:14268" # HTTP collector
-      - "14250:14250" # gRPC collector
+      - "16686:16686"
+      - "14268:14268"
+      - "14250:14250"
     networks:
       - dharmamind_network
 
@@ -300,6 +313,7 @@ services:
     depends_on:
       - backend
       - brand_website
+      - chat_app
       - community
     networks:
       - dharmamind_network
@@ -337,111 +351,3 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/16
-=======
-version: '3.8'
-
-services:
-  # Main DharmaMind AI Application
-  dharmamind-ai:
-    build: .
-    container_name: dharmamind-core
-    ports:
-      - "8000:8000"
-    environment:
-      - PYTHONPATH=/app
-      - DATABASE_URL=postgresql://dharma:dharma123@postgres:5432/dharmamind
-      - REDIS_URL=redis://redis:6379
-      - SECRET_KEY=your-super-secret-key-change-in-production
-      - ALGORITHM=HS256
-      - ACCESS_TOKEN_EXPIRE_MINUTES=30
-    depends_on:
-      - postgres
-      - redis
-    volumes:
-      - ./logs:/app/logs
-    restart: unless-stopped
-    networks:
-      - dharma-network
-
-  # PostgreSQL Database
-  postgres:
-    image: postgres:15-alpine
-    container_name: dharma-postgres
-    environment:
-      - POSTGRES_DB=dharmamind
-      - POSTGRES_USER=dharma
-      - POSTGRES_PASSWORD=dharma123
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-    networks:
-      - dharma-network
-
-  # Redis for Caching and Message Queue
-  redis:
-    image: redis:7-alpine
-    container_name: dharma-redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    restart: unless-stopped
-    networks:
-      - dharma-network
-
-  # Nginx Reverse Proxy
-  nginx:
-    image: nginx:alpine
-    container_name: dharma-nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/ssl:/etc/nginx/ssl
-    depends_on:
-      - dharmamind-ai
-    restart: unless-stopped
-    networks:
-      - dharma-network
-
-  # Prometheus for Monitoring
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: dharma-prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    restart: unless-stopped
-    networks:
-      - dharma-network
-
-  # Grafana for Visualization
-  grafana:
-    image: grafana/grafana:latest
-    container_name: dharma-grafana
-    ports:
-      - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-SecureGrafana2025!}
-    volumes:
-      - grafana_data:/var/lib/grafana
-    restart: unless-stopped
-    networks:
-      - dharma-network
-
-volumes:
-  postgres_data:
-  redis_data:
-  prometheus_data:
-  grafana_data:
-
-networks:
-  dharma-network:
-    driver: bridge
->>>>>>> 0a7b3468604638c47efcf853a27e0c92a7e9fccc
