--- a/dharmamind-chat/package.json
+++ b/dharmamind-chat/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@types/dompurify": "^3.0.5",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -22,6 +23,8 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.3.1",
+    "form-data": "^4.0.5",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "next": "^14.0.0",
